fix: scrollbar

--- a/assets/styles/setup/_layout.scss
+++ b/assets/styles/setup/_layout.scss
@@ -8,7 +8,7 @@ body,
   scroll-behavior: smooth;
 
   ::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
   }
 
   ::-webkit-scrollbar-track {
@@ -16,7 +16,7 @@ body,
   }
 
   ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #4287f5;
   }
 }
 
